# Steward

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_CN.md  README_EN.md  agent.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
config/: model.example.yaml  policy.yaml  skills_catalog.yaml
config/connectors/: calendar.yaml  chat.yaml  custom.yaml  email.yaml  github.yaml  local.yaml  manual.yaml  mcp.yaml  screen.yaml
migrations/: env.py
migrations/versions/: 20260301_0001_initial_schema.py  20260302_0002_execution_runtime.py
scripts/: bootstrap_macos.sh  check_module_comments.py  install_project_skills.sh  quickstart.sh  quickstart_capabilities.py
skills/github-api-gateway/: SKILL.md
skills/gog/: SKILL.md
skills/self-improving-agent/: SKILL.md
src/steward/: __init__.py  cli.py  main.py
src/steward/api/: deps.py
src/steward/connectors/: base.py  calendar.py  chat.py  email.py  github.py  local.py  manual.py  mcp.py  normalizers.py  provider_adapters.py  registry.py  screen.py
src/steward/connectors_runtime/: __init__.py  runner.py  specs.py  state.py
src/steward/core/: config.py  logging.py  model_config.py  policy.py
src/steward/domain/: __init__.py  enums.py  schemas.py  state_machine.py
src/steward/learning/: feedback.py
src/steward/macos/: __init__.py  menu_bar.py  screen_sensor.py
src/steward/observability/: metrics.py  tracing.py
src/steward/planning/: __init__.py  execution_policy.py  plan_compiler.py  superpowers_assets.py
src/steward/screen_sensor/: __init__.py  base.py  cli.py  linux.py  macos.py  windows.py
src/steward/services/: action_runner.py  brief_preferences.py  briefing.py  capability_manager.py  conflict.py  container.py  context_space.py  (+15 more)
tests/: conftest.py
tests/e2e/: test_conflict_real_examples.py  test_manual_event_flow.py
tests/integration/: test_api_ingest.py  test_webhooks_and_ui.py
tests/unit/: test_model_config.py  test_model_gateway.py  test_model_gateway_prompt.py  test_policy_gate.py  test_screen_sensor.py  test_state_machine.py  test_webhook_backpressure.py
(+34 files in other folders)
